--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "verify-same-kmer-content"
+description = "Verify that an SPSS has the same kmer content as a set of unitigs"
 version = "0.1.0"
 edition = "2021"
+license = "BSD-2-Clause"
+rust-version = "1.63.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
